# launcherg

./: .eslintrc.cjs  .gitignore  .tauri-updater.json  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  refinery.toml  skills-lock.json  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  unocss.config.ts  update.ps1  vite.config.ts
.claude/: settings.local.json
src-tauri/: Cargo.toml  NATIVE_MESSAGING_HOST.md  build.rs  native-messaging-manifest.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/domain/: Cargo.toml
src-tauri/domain/benches/: game_matcher_bench.rs
src-tauri/domain/src/: collection.rs  deny_list.rs  distance.rs  dmm_pack.rs  dmm_work_pack.rs  erogamescape.rs  extension.rs  file.rs  icon.rs  lib.rs  native_host_log.rs  save_image_queue.rs  scan.rs  thumbnail.rs  work_download_path.rs  work_link_pending_exe.rs  work_omit.rs  work_parent_pack.rs  works.rs
src-tauri/domain/src/game_matcher/: config.rs  file_info.rs  matcher.rs  mod.rs  ngram.rs  normalizer.rs
src-tauri/domain/src/pubsub/: event.rs  mod.rs
src-tauri/domain/src/repository/: all_game_cache.rs  app_settings.rs  collection.rs  deny_list.rs  dmm_pack.rs  dmm_work_pack.rs  erogamescape.rs  explored_cache.rs  manager.rs  mock.rs  mod.rs  native_host_log.rs  save_image_queue.rs  transaction.rs  work_download_path.rs  work_like.rs  work_lnk.rs  work_omit.rs  work_parent_packs.rs  works.rs
src-tauri/domain/src/repositoryv2/: collection.rs  mod.rs  works.rs
src-tauri/domain/src/service/: app_signal_router.rs  image_queue_drain.rs  image_queue_event.rs  mod.rs  save_path_resolver.rs  work_linker.rs  work_registration.rs
src-tauri/domain/src/windows/: mod.rs  process.rs  proctail.rs  proctail_manager.rs  shell_link.rs
src-tauri/icons/: icon.icns
src-tauri/infrastructure/: Cargo.toml
src-tauri/infrastructure/src/: _infrastructure_mod.rs  image_queue_worker.rs  lib.rs  save_path_resolver.rs  thumbnail.rs
src-tauri/infrastructure/src/app_signal_router/: endpoint.rs  endpoint_test.rs  mod.rs  test_support.rs
src-tauri/infrastructure/src/heuristic_duplicate_resolver/: mod.rs  test.rs
src-tauri/infrastructure/src/heuristic_metadata_extractor/: mod.rs  test.rs
src-tauri/infrastructure/src/icon/: mod.rs  tests.rs
src-tauri/infrastructure/src/image_queue_worker/: handler.rs  mod.rs  preprocess.rs  preprocess_test.rs  runner.rs  sidecar.rs  sidecar_test.rs  tests.rs  types.rs  types_test.rs  worker.rs
src-tauri/infrastructure/src/local_file_system/: local.rs  local_test.rs  mod.rs
src-tauri/infrastructure/src/migrations/: V10__denied_store_ids.sql  V11__dmm_pack_marks.sql  V12__work_parent_packs.sql  V13__work_download_paths.sql  V14__add_work_lnks.sql  V15__work_info_by_erogamescape.sql  V16__work_activity_tables.sql  V1__init.sql  V3__refactor_collection_elements.sql  V3__work_centered_schema.sql  V4__app_settings.sql  V4__migrate_collection_elements_data.sql  V5__app_settings_remote_share.sql  V5__cleanup_collection_elements.sql  V6__add_dl_stores.sql  V8__add_dmm_dlsite_maps.sql  V9__image_save_queue_and_logs.sql
src-tauri/infrastructure/src/native_messaging/: client.rs  factory.rs  mod.rs  path_resolver.rs
src-tauri/infrastructure/src/pubsubimpl/: pubsub.rs
src-tauri/infrastructure/src/repositoryimpl/: all_game_cahe.rs  collection.rs  deny_list.rs  dmm_pack.rs  dmm_work_pack.rs  driver.rs  explored_cache.rs  mod.rs  native_host_log.rs  repository.rs  save_image_queue.rs  work_omit.rs  work_parent_packs.rs  works.rs
src-tauri/infrastructure/src/repositorymock/: mod.rs
src-tauri/infrastructure/src/sqliterepository/: all_game_cache.rs  app_settings.rs  collection.rs  dmm_work_pack.rs  driver.rs  erogamescape.rs  explored_cache.rs  mod.rs  native_host_log.rs  save_image_queue.rs  sqliterepository.rs  transaction.rs  work_download_path.rs  work_omit.rs  work_parent_packs.rs  works.rs
src-tauri/infrastructure/src/windowsimpl/: mod.rs  process.rs  proctail.rs  proctail_manager.rs  proctail_manager_test.rs  proctail_test.rs  shell_link.rs  windows.rs
src-tauri/native-messaging-host/: Cargo.toml  build.rs
src-tauri/native-messaging-host/src/: .gitignore  main.rs
src-tauri/src/: main.rs  remote_launch.rs
src-tauri/src/domain/: all_game_cache.rs  collection.rs  distance.rs  explored_cache.rs  extension.rs  file.rs  icon.rs  mod.rs  native_host_log.rs  network.rs  save_image_queue.rs  thumbnail.rs
src-tauri/src/infrastructure/: icon.rs  image_queue_worker.rs  mod.rs  thumbnail.rs  util.rs
src-tauri/src/interface/: command.rs  command_test.rs  error.rs  mod.rs  module.rs
src-tauri/src/migrations/: V2__iranai_table.sql  V2__thumbnail_size.sql  V3__refactor_collection_elements.sql  V4__migrate_collection_elements_data.sql  V5__cleanup_collection_elements.sql  V6__add_dl_stores.sql  V7__add_erogamescape_map.sql  V8__add_dmm_dlsite_maps.sql
src-tauri/src/native_messaging/: host.rs  mod.rs  protocol.rs  security.rs
src-tauri/src/phonerg/: mod.rs  module.rs  serve.rs
src-tauri/src/usecase/: all_game_cache.rs  all_game_cache_test.rs  collection.rs  collection_test.rs  error.rs  explored_cache.rs  explored_cache_test.rs  extension_installer.rs  extension_manager.rs  extension_manager_test.rs  file.rs  file_test.rs  game_identifier.rs  image.rs  mod.rs  native_host.rs  native_host_sync.rs  network.rs  network_test.rs  process.rs
src-tauri/usecase/: Cargo.toml
src-tauri/usecase/src/: _usecase_mod.rs  all_game_cache.rs  all_game_cache_test.rs  app_settings.rs  collection.rs  collection_test.rs  deny_list.rs  dmm_pack.rs  erogamescape.rs  error.rs  explored_cache.rs  explored_cache_test.rs  extension_installer.rs  extension_manager.rs  extension_manager_test.rs  file.rs  file_test.rs  game_identifier.rs  host_log.rs  image.rs  image_queue.rs  lib.rs  native_host_sync_test.rs  native_messaging_mock.rs  process.rs  remote_share.rs  repositorymock.rs  windowsmock.rs  work.rs  work_link_pending_exe.rs  work_omit.rs  work_pipeline.rs  work_pipeline_test.rs  work_thumbnail.rs
(+665 files in other folders)
