[package]
name = "launcherg"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-read-text", "dialog-open", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "http-request", "process-command-api", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.57"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
chrono = { version = "0.4.26", features = ["serde"] }
derive-new = "0.5.0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
image = "0.24.6"
tauri-plugin-clipboard = "0.2.5"
base64 = "0.21.2"
dirs = "5.0.1"
fast_image_resize = "1.0.0"
url = "2.4.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"
]

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
