[package]
name = "launcherg"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.57"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
chrono = { version = "0.4.26", features = ["serde"] }
derive-new = "0.5.0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
image = "0.24.6"
base64 = "0.21.2"
dirs = "5.0.1"
fast_image_resize = "3.0.4"
url = "2.4.1"
ico = "0.3.0"
sysinfo = "0.29.10"
refinery = { version = "0.8.9", features = ["rusqlite"] }
axum = "0.7.5"
tokio = { version = "1.0", features = ["net", "signal"] }
tokio-util = "0.7.11"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Graphics_Capture",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Foundation",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
]

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
