[package]
name = "native-messaging-host"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
infrastructure = { path = "../infrastructure" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
windows = { workspace = true }
chrono = { workspace = true }

